# elastic_web

./: .env -example  .gitignore  Makefile  README.md  docker-compose.yml  fill_index_from_csv.py  pyproject.toml  requirements.txt
backend/: Dockerfile  __init__.py  __main__.py  requirements.txt
backend/service/: Dockerfile  __main__.py  config.py  mapping.py  requirements.txt
backend/service/endpoints/: create_index_handler.py  data_handlers.py  delete_handlers.py  get_handlers.py
backend/service/utils/: elastic_logic.py  formatters.py  logic.py  schemas.py
elastic/: Dockerfile  __init__.py
web/: __init__.py  index.html
